--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       }
 
       body::before{
-          background: url('/Image/bg5.jpg') no-repeat center center/cover;
+          background: url('https://image.freepik.com/free-photo/abstract-grunge-decorative-relief-navy-blue-stucco-wall-texture-wide-angle-rough-colored-background_1258-28311.jpg') no-repeat center center/cover;
           content: '';
           position: absolute;
           top: 0;
