--- a/HTML/upi.html
+++ b/HTML/upi.html
@@ -21,7 +21,7 @@
         font-family: 'Baloo Bhai 2', cursive;
         }
         body::before {
-          background: url('Image/bg6.jpg') no-repeat center center/cover;
+          background: url('../Image/bg6.jpg') no-repeat center center/cover;
           content: '';
           position: absolute;
           top: 0;
