--- a/HTML/net_banking.html
+++ b/HTML/net_banking.html
@@ -148,9 +148,9 @@
           Net Banking
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-          <li><a class="dropdown-item" href="HTML/debit.html">Debit Card</a></li>
-          <li><a class="dropdown-item" href="HTML/upi.html">UPI</a></li>
-          <li><a class="dropdown-item" href="HTML/net_banking.html">Net Banking</a></li>
+          <li><a class="dropdown-item" href="debit.html">Debit Card</a></li>
+          <li><a class="dropdown-item" href="upi.html">UPI</a></li>
+          <li><a class="dropdown-item" href="net_banking.html">Net Banking</a></li>
         </ul>
       </div>
       <div id="netBanking">
