--- a/HTML/payment_detail.html
+++ b/HTML/payment_detail.html
@@ -149,7 +149,7 @@
       </div>
       <div class="col-12">
         <!-- <a href="" type="submit" class="btn btn-primary" id="proceed">Proceed</a> -->
-      <button type="submit" class="btn btn-primary" id="proceed"><a href="HTML/paymethod.html" onclick="setLocal()">Proceed</a></button>
+      <button type="submit" class="btn btn-primary" id="proceed"><a href="paymethod.html" onclick="setLocal()">Proceed</a></button>
       </div>
     </form>
   </div>
