--- a/HTML/paymethod.html
+++ b/HTML/paymethod.html
@@ -120,9 +120,9 @@
          Select Payment Method
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-          <li><a class="dropdown-item" href="HTML/debit.html">Debit Card</a></li>
-          <li><a class="dropdown-item" href="HTML/upi.html">UPI</a></li>
-          <li><a class="dropdown-item" href="HTML/net_banking.html">Net Banking</a></li>
+          <li><a class="dropdown-item" href="debit.html">Debit Card</a></li>
+          <li><a class="dropdown-item" href="upi.html">UPI</a></li>
+          <li><a class="dropdown-item" href="net_banking.html">Net Banking</a></li>
         </ul>
       </div>
 
