--- a/HTML/net_banking.html
+++ b/HTML/net_banking.html
@@ -111,6 +111,18 @@
         display: block;
         width: 100%;
         }
+        @media (max-width:692px){
+          .dropdown{
+        width: 50%;
+      }
+      #netBanking{
+        width: 100%;
+        margin: 33%  auto auto auto;
+      }
+      #amount{
+         width: 50%; 
+        }
+    }
       </style>
     <title>Hello, world!</title>
   </head>
