--- a/HTML/payment_detail.html
+++ b/HTML/payment_detail.html
@@ -97,6 +97,12 @@
         width: 100%;
 
     }
+
+    @media (max-width:692px){
+      .payment-detail{
+        width: 100%;
+      }
+    }
   </style>
 </head>
 
