--- a/HTML/paymethod.html
+++ b/HTML/paymethod.html
@@ -84,6 +84,11 @@
         .dropdown-menu li a{
           color: white;
         }
+        @media (max-width:692px){
+          .dropdown{
+        width: 50%;
+      }
+    }
       </style>
     <title>Hello, world!</title>
   </head>
