--- a/HTML/upi.html
+++ b/HTML/upi.html
@@ -107,6 +107,9 @@
           display: inline;
           width: auto;
         }
+        .form-label{
+          color:white;
+        }
         #pay{
           color: #fff;
         background-color: #dc3545;
@@ -114,6 +117,18 @@
         display: block;
         width: 100%;
         }
+        @media (max-width:692px){
+          .dropdown{
+        width: 50%;
+      }
+      #upi{
+        width: 100%;
+        margin: 33%  auto auto auto;
+      }
+      #amount{
+         width: 50%; 
+        }
+    }
         </style>
     <title>Hello, world!</title>
   </head>
