--- a/HTML/paymethod.html
+++ b/HTML/paymethod.html
@@ -128,6 +128,7 @@
           <li><a class="dropdown-item" href="debit.html">Debit Card</a></li>
           <li><a class="dropdown-item" href="upi.html">UPI</a></li>
           <li><a class="dropdown-item" href="net_banking.html">Net Banking</a></li>
+          <li><a class="dropdown-item" href="https://rzp.io/l/JTJQHEZJ">RazorPay</a></li>
         </ul>
       </div>
 
