add RazorPay gateway

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
           margin: 20px auto;
           font-size: larger;
       }
+      form{
+        display: block;
+    width: 16%;
+    margin: 10px auto;
+}
     </style>
   </head>
   <body>
@@ -130,7 +135,7 @@
         <div class="heading">
           <h1>A Little effort make a huge difference</h1>
           <h5>We know only too well that what we are doing is nothing more than a drop in the ocean. But if the drop were not there, the ocean would be missing something.</h5>
-         <a href="HTML/payment_detail.html" type="button" class="btn btn-danger" id="donate">Donate</a> 
+          <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_IARGl7pp6xiSMg" async> </script> </form>
         </div>
       </section>
 
