add title on both pages

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" href="CSS/style.css"> -->
-  <title>Hello, world!</title>
+  <title>Payment Gateway Integration | TSF</title>
   <style>
     * {
       margin: 0;
@@ -147,7 +147,7 @@
           </li>
         </ul>
 
-        <a href="#" class="btn btn-danger" id="donate_nav">Donate</a>
+        <a href="donate.html" class="btn btn-danger" id="donate_nav">Donate</a>
       </div>
     </div>
   </nav>
