--- a/donate.html
+++ b/donate.html
@@ -121,7 +121,7 @@
           <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_IARGl7pp6xiSMg" async> </script> </form>
         </div>
       </section>
-      <div class="container mt-5">
+      <div class="container" style="margin-top: 14rem;">
         <!-- Footer -->
         <footer class="text-center text-lg-start text-white" style="background-color: #072654">
           <!-- Grid container -->
