--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <!-- <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_IARGl7pp6xiSMg" async> </script> </form> -->
     </div>
   </section>
-  <div class="container mt-5">
+  <div class="container" style="margin-top: 10rem;">
     <!-- Footer -->
     <footer class="text-center text-lg-start text-white" style="background-color: #dc3545">
       <!-- Grid container -->
