add text in footer

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
       <!-- Copyright -->
       <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2)">
-        © 2021 Copyright:
+              Developed By Keval Mandalik | © 2021 Copyright:
         <a class="text-white" href="#">CharitAble</a>
       </div>
       <!-- Copyright -->
